more endoints added to backend and rgs

--- a/SnowKingdomBackendAPI.RGS/SnowKingdomBackendAPI.RGS.csproj
+++ b/SnowKingdomBackendAPI.RGS/SnowKingdomBackendAPI.RGS.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SnowKingdomBackendAPI.ServiceDefaults\SnowKingdomBackendAPI.ServiceDefaults.csproj" />
+    <ProjectReference Include="..\SnowKingdomBackendAPI.ApiService\SnowKingdomBackendAPI.ApiService.csproj" />
   </ItemGroup>
 
 </Project>
