backend and rgs request and response

--- a/SnowKingdomBackendAPI.RGS/appsettings.json
+++ b/SnowKingdomBackendAPI.RGS/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Backend": {
+    "Url": "http://localhost:5001/play"
+  },
+  "RNG": {
+    "BaseUrl": "http://localhost:8080",
+    "PoolsEndpoint": "/pools",
+    "RngEndpoint": "/rng"
+  }
 }
