free spins adjust

--- a/SnowKingdomBackendAPI.RGS/appsettings.json
+++ b/SnowKingdomBackendAPI.RGS/appsettings.json
@@ -2,7 +2,10 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Information",
+      "Microsoft.AspNetCore": "Information",
+      "Microsoft.AspNetCore.HttpLogging": "Information",
+      "System.Net.Http": "Information"
     }
   },
   "AllowedHosts": "*",
