--- a/SnowKingdomBackendAPI.ApiService/SnowKingdomBackendAPI.ApiService.csproj
+++ b/SnowKingdomBackendAPI.ApiService/SnowKingdomBackendAPI.ApiService.csproj
@@ -11,6 +11,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.0" />
   </ItemGroup>
 
 </Project>
